# recipe-client-leptos

./: .gitmodules  Cargo.toml  README.md  index.css  index.html
src/: lib.rs  main.rs  recipe.rs
