[package]
name = "leptos-client"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
reqwasm = "0.5.0"
send_wrapper = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-subscriber-wasm = "0.1.0"
web-sys = { version = "0.3.77", features = ["AbortController", "AbortSignal"] }

# Logging
console_log = "1.0.0"
log = "0.4.27"
console_error_panic_hook = "0.1.7"

# Serialization / Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
